<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sharedViewModel"
            type="com.example.geofenceapp.viewmodels.SharedViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addgeofence.Step3Fragment">

        <TextView
            android:id="@+id/geofence_step3_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/geofence"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/step3_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_3_3"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/geofence_step3_textView"
            app:layout_constraintTop_toBottomOf="@+id/geofence_step3_textView" />

        <TextView
            android:id="@+id/scale_distance_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/_500_0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/slider"
            app:layout_constraintEnd_toEndOf="@+id/slider"
            app:layout_constraintStart_toStartOf="@+id/slider" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:stepSize="500.0"
            android:valueFrom="500.0"
            android:valueTo="10000.0"
            updateSliderValueTextView="@{scaleDistanceTextView}"
            getGeoRadius="@{sharedViewModel}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/choose_radius_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/choose_a_radius_for_your_geofence"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/slider"
            app:layout_constraintStart_toStartOf="@+id/slider"
            app:layout_constraintTop_toBottomOf="@+id/slider" />


        <TextView
            android:id="@+id/step3_done_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/done"
            android:textColor="@color/view_state_background_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/step3_back_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/back"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>