<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sharedViewModel"
            type="com.example.geofenceapp.viewmodels.SharedViewModel" />
        <variable
            name="step2ViewModel"
            type="com.example.geofenceapp.viewmodels.Step2ViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addgeofence.Step2Fragment">

        <TextView
            android:id="@+id/geofence_step2_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/geofence"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/step2_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_2_3"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/geofence_step2_textView"
            app:layout_constraintTop_toBottomOf="@+id/geofence_step2_textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/step2_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            errorHandler="@{step2ViewModel.internetAvailable}"
            recyclerViewHandler="@{predictionsRecyclerView}"
            app:errorIconDrawable="@drawable/ic_no_internet_connection"
            app:errorTextColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/step2_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:text="@{sharedViewModel.geoLocationName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/predictions_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="2dp"
            android:layoutAnimation="@anim/recycler_view_anim"
            app:layout_constraintHeight_max="200dp"
            app:layout_constraintEnd_toEndOf="@+id/step2_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/step2_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/step2_text_input_layout" />

        <TextView
            android:id="@+id/step2_next_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:enabled="@{step2ViewModel.isNextEnabled()}"
            android:text="@string/next"
            android:textColor="@color/view_state_background_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/step2_back_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/back"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/powered_by_google_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/powered_by_google"
            android:alpha="0.5"
            app:layout_constraintBottom_toTopOf="@+id/step2_text_input_layout"
            app:layout_constraintEnd_toEndOf="@+id/step2_text_input_layout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/step2_text_input_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>